--- a/build-scala-using-kotlin/build.gradle
+++ b/build-scala-using-kotlin/build.gradle
@@ -155,7 +155,7 @@ tasks.withType(ScalaCompile) {
 }
 
 sourceSets {
-//    main.kotlin.srcDirs += main.java.srcDirs
+//    main.scala.srcDirs += main.kotlin.srcDirs
     main.kotlin.srcDir "src/main/java"
     main.scala.srcDir "src/main/java"
     main.java.srcDirs = []
@@ -167,7 +167,7 @@ compileScala.dependsOn = compileScala.taskDependencies.values - "compileJava"
 compileJava.dependsOn compileScala
 //compileJava.classpath += files(compileScala.destinationDir)
 
-compileScala.dependsOn compileKotlin
+compileScala.dependsOn compileKotlin.taskDependencies
 compileScala.classpath += files(compileKotlin.destinationDir)
 
 taskTree {
